# server-room-monitoring-system

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cppcheck-suppressions.txt  guide.md  misra-deviations.md  server-room-monitoring-system.ioc
.github/workflows/: ci.yml
Core/Inc/: app_tasks.h  bmp280.h
Core/Src/: app_tasks.c  bmp280.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  test_bmp280_i2c.c  test_bmp280_pure.c
tests/stubs/: hal_i2c_stub.c  hal_i2c_stub.h  stm32f4xx_hal.h
